/* 
    protobuf关键点:(向前向后兼容)
    1. 永远不要更改字段的标签
    2. 只有当新旧数据相互兼容时,才能更改字段的数据类型, 例如, 可以在int32, uint32, int64, uint64和bool之间进行转换
    3. 永远不要重命名字段

    对于grpc服务, 除了不能对协议缓冲区消息执行的操作外
    1. 在不中断现有客户端的情况下, 无法重命名**服务**, 除非可以完全保证客户端和服务器应用程序将被同时更改
    2. 不能重命名**函数**. 引入新函数, 将使用该函数的所有应用程序切换到新函数, 然后删除旧函数
 */
syntax = "proto3";

option go_package = ".;service";

service GMService {
    // rpc 服务函数名(参数) 返回 (返回参数)
    rpc ExcuteGM(GMRequest) returns (GMResponse) {}
}

// message关键字: 可以理解为go语言中的结构体
message GMRequest {
    string command = 1;
    string args = 2;
    string playerID = 3;
}

// 嵌套消息
message GMResponse {
    int64 code = 1;
    string msg = 2;
}